# SystemManager

./: CMakeLists.txt  LICENSE  README.md  USAGE_GUIDE.md  launcher.bat  launcher.ps1  run.sh
build_cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  clean-all.vcxproj  clean-all.vcxproj.filters  cmake_install.cmake  run.vcxproj  run.vcxproj.filters
build_cmake/Release/Reports/: SystemHealth_20260702_183511.csv  SystemHealth_20260702_183511.html  SystemHealth_20260702_183511.json  SystemHealth_20260702_183511.txt
build_cmake/SystemHealthToolkit.dir/Release/: SystemHealthToolkit.exe.recipe
build_cmake/SystemHealthToolkit.dir/Release/SystemHe.8592944A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  SystemHealthToolkit.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: logger.h  platform.h  repair.h  scanners.h  toolkit.h  ui.h
src/: benchmark.cpp  logger.cpp  main.cpp  malware.cpp  new_ops.cpp  platform.cpp  repair.cpp  scanners.cpp  storage.cpp  threadpool.cpp  ui.cpp
